@@ -153,6 +153,9 @@ bool QWEBKIT_EXPORT qt_drt_pauseTransitionOfProperty(QWebFrame *qframe, const QS
 // This method is only intended to be used for testing the SVG animation system.
 bool QWEBKIT_EXPORT qt_drt_pauseSVGAnimation(QWebFrame *qframe, const QString &animationId, double time, const QString &elementId)
 {
+#if !ENABLE(SVG)
+    return false;
+#else
     Frame* frame = QWebFramePrivate::core(qframe);
     if (!frame)
         return false;
@@ -167,10 +170,7 @@ bool QWEBKIT_EXPORT qt_drt_pauseSVGAnimation(QWebFrame *qframe, const QString &a
     if (!coreNode || !SVGSMILElement::isSMILElement(coreNode))
         return false;
 
-#if ENABLE(SVG)
     return doc->accessSVGExtensions()->sampleAnimationAtTime(elementId, static_cast<SVGSMILElement*>(coreNode), time);
-#else
-    return false;
 #endif
 }
 
